--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Server Web Usando Nodejs",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
+    "dev":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/JuanD1104/NodeJS_Express_Mongo/issues"
   },
-  "homepage": "https://github.com/JuanD1104/NodeJS_Express_Mongo#readme"
+  "homepage": "https://github.com/JuanD1104/NodeJS_Express_Mongo#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
